--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mathilde's portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&display=swap');
     </style>
@@ -24,10 +25,13 @@
                     <a class="nav-link active" aria-current="page" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="#">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Work</a>
+                    <a class="nav-link" href="#">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
@@ -40,7 +44,91 @@
 
 <!-- NAVBAR END -->
 
+<!-- ABOUT ME SECTION -->
+<section id="home" class="about-me">
+    <div class="container text-center">
+        <div class="row align-items">
+
+            <!--LEFT BLOCK-->
+            <div class="col-md-6 about-me-image">
+                <div class="circular-portrait">
+                    <img src="images/profilepic_resized.jpg" class="img-fluid" alt="profile picture">
+                </div>
+                <div class="get-in-touch">
+                    <div class="flexbox-container item-1"><a class="nav-link" href="https://www.linkedin.com/in/m-mathilde34/"><i class="fas fa-brands fa-linkedin"></i></a></div>
+                    <div class="flexbox-container item-2"><a class="nav-link" href="https://github.com/m-mathilde34"><i class="fa-brands fa-github"></i></a></div>
+                    <div class="flexbox-container item-3"><a class="nav-link" href="mailto:m.mathilde34@live.fr"><i class="fa-solid fa-envelope"></i></a></div>
+                </div>
+            </div>
+
+            <!--RIGHT DESCRIPTION BLOCK-->
+            <div class="col-md-6 about-me-section">
+                
+                <div class="col-md-6 about-me-title">
+                    <h1 class="display-2">
+                        <span class="display-2--heading">Aspiring Developer</span>
+                    </h1>              
+                </div>
+
+                <div class="container-fluid text-center fun-section">
+                    <div class="row">
+                      <div class="col-sm-7">
+                        <div class="about-me-vs">
+                            <div class="flexbox-marker item" id="playstation"><i class="fa-brands fa-playstation" style="color: #88bbd6;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #B8B8B8;"></i></div>
+                            <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker item" id="xbox"><i class="fa-brands fa-xbox" style="color: #88bbd6;"></i></div>                    
+                        </div>
+                        <div class="about-me-vs">
+                            <div class="flexbox-marker item" id="android"><i class="fa-brands fa-android" style="color: #88bbd6;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #B8B8B8;"></i></div>
+                            <div class="flexbox-marker item" id="apple"><i class="fa-brands fa-apple" style="color: #88bbd6;"></i></div>                    
+                        </div>
+                        <div class="about-me-vs">
+                            <div class="flexbox-marker item" id="pizza"><i class="fa-solid fa-pizza-slice" style="color: #88bbd6;"></i></div>
+                            <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #B8B8B8;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker item" id="burger"><i class="fa-solid fa-burger" style="color: #88bbd6;"></i></div>                    
+                        </div>
+                      </div>
+                      <div class="col-sm-5">
+                        <div class="col-sm-10 listening-to">
+                            <a href="https://www.youtube.com/watch?v=HIhAK-dgng4" alt="Currently listening to..."><img src="images/music.gif"></a></i><p>Currently playing...</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+
+                <div class="col-md-6 about-me-description">
+                    <p><br />Having just completed a Msc of Computer Science with the University of Bath, I am now looking for a role as a software developer.
+                        My dissertation involved the creation of a novel dataset, and I am particularly interested in Machine Learning as a way to protect
+                        and preserve our cultural heritage for future generations to enjoy. I like working on both front-end and back-end projects and I am 
+                        currently working on personal projects such as modelling the Solar System in Java.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#E9E9E9" fill-opacity="1" d="M0,320L120,272C240,224,480,128,720,106.7C960,85,1200,139,1320,165.3L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
+</section>
+
+
+
+<!-- ABOUT ME END -->
     
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+
+<a href="https://www.flaticon.com/free-animated-icons/music" title="music animated icons">Music animated icons created by Freepik - Flaticon</a>
+    <script src="assets/js/bootstrap.bundle.js"></script>
 </body>
 </html>
