Implemented an 'education' section. Added styling for section. Deleted a couple of redundant stylings in _about-me

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Education</a>
+                    <a class="nav-link" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Projects</a>
@@ -103,7 +103,7 @@
                       </div>
                       <div class="col-sm-5">
                         <div class="col-sm-10 listening-to">
-                            <a href="https://www.youtube.com/watch?v=HIhAK-dgng4" alt="Currently listening to..."><img src="images/music.gif"></a></i><p>Currently playing...</p>
+                            <a href="https://www.youtube.com/watch?v=3YXUWWZJXpE" alt="Currently listening to..."><img src="images/music.gif"></a></i><p>Currently playing...</p>
                         </div>
                       </div>
                     </div>
@@ -119,13 +119,59 @@
             </div>
         </div>
     </div>
-
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#E9E9E9" fill-opacity="1" d="M0,320L120,272C240,224,480,128,720,106.7C960,85,1200,139,1320,165.3L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
 </section>
-
-
-
 <!-- ABOUT ME END -->
+
+<!-- EDUCATION SECTION -->
+<section id="education" class="education">
+
+    <div class="container-fluid text-center education-circles">
+        <h2>Education</h2>
+
+        <div class="container-fluid circles">
+
+            <div class="col-md-6 circle">
+                <div class="col-md-6 diploma">
+                    <div class="circle-icon"><i class="fa-solid fa-user-graduate"></i></div>
+                </div>
+                <div class="col-md-6 diploma">
+                    <p class="course">MSc Computer Science - <i class="fa-regular fa-hourglass-half"></i></p>
+                    <p class="date">2021 - 2024 @ The University of Bath</p>
+                    <br >
+                    <p class="dissertation">My dissertation involved the creation of a novel dataset
+                        the quality of which was demonstrated using various CNNs. It is titled ‘Which ancient civilisation does this artefact
+                        belong to? A deep learning model that
+                        identifies the provenance of the pictured
+                        artefact.’
+                    </p>
+                    <div class="button-container"><button type="button" class="btn">Read me</button></div>
+                </div>
+            </div>
+            <br >
+
+            <div class="col-md-6 circle">
+                <div class="col-md-6 diploma">
+                    <div class="circle-icon"><i class="fa-solid fa-user-graduate"></i></div>
+                </div>
+                    <div class="col-md-6 diploma">
+                    <p class="course">BA Drama - First Class Honours</p>
+                    <p class="date">2014 - 2017 @ The University of Winchester</p>
+                    <br >
+                    <p class="dissertation">My dissertation investigated representations of the afterlife in both early modern drama 
+                        and contemporary films and how it relates to our changes in Western belief systems. It is titled ‘
+                        ‘Born To Fly Upward’ : 
+                        Depictions of the afterlife in early modern drama 
+                        and contemporary film.’
+                    </p>
+                    <div class="button-container"><button type="button" class="btn">Read me</button></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+<!-- EDUCATION END -->
     
 
 <a href="https://www.flaticon.com/free-animated-icons/music" title="music animated icons">Music animated icons created by Freepik - Flaticon</a>
