Added skills and tools to education section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Resume</a>
@@ -164,17 +164,59 @@
                         Depictions of the afterlife in early modern drama 
                         and contemporary film.’
                     </p>
-                    <div class="button-container"><button type="button" class="btn">Read me</button></div>
+                    <div class="button-container"><button type="button" class="btn"><a href="pdfs/'Born to fly upward'.pdf" alth="Bachelor of Drama dissertion">Read me</a></button></div>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="container-fluid text-center skills">
+
+    <h2>Skills and Tools</h2>
+
+        <div class="container text-center">
+            <div class="row">
+                <div class="col"><img src="images/skills_tools/icons8-java-100.svg"></div>
+                <div class="col"><img src="images/skills_tools/icons8-python.svg"></div>
+                <div class="col"><img src="images/skills_tools/icons8-html.svg"></div>
+                <div class="col"><img src="images/skills_tools/icons8-css.svg"></div>
+                <div class="col"><img src="images/skills_tools/icons8-c.svg"></div>
+            </div>
+            <div class="row">
+                <div class="col"><img src="images/skills_tools/icons8-haskell.svg"></div>
+                <div class="col"><img src="images/skills_tools/icons8-sql-100.png"></div>
+                <div class="col"><img src="images/skills_tools/tools/icons8-bootstrap.svg"></div>
+                <div class="col"><img src="images/skills_tools/tools/icons8-docker.svg"></div>
+                <div class="col"><img src="images/skills_tools/tools/icons8-github.svg"></div>
+            </div>
+            <div class="row">
+                <div class="col-3"><img src="images/skills_tools/tools/icons8-git.svg"></div>
+                <div class="col-3"><img src="images/skills_tools/tools/icons8-my-sql.svg"></div>
+                <div class="col-3"><img src="images/skills_tools/tools/icons8-sass.svg"></div>
+                <div class="col-3"><img src="images/skills_tools/tools/Jupyter_logo.svg.png" width="100" height="100"></div>
+            </div>
+            <div class="row">
+                <div class="col"><img src="images/skills_tools/tools/scrapylogo.png" width="100" height="100"></div>
+                <div class="col"><img src="images/skills_tools/tools/seabornlogo.svg" width="100" height="100"></div>
+                <div class="col"><img src="images/skills_tools/tools/Tensorflow_logo.svg.png" width="100" height="100"></div>
+                <div class="col"><img src="images/skills_tools/tools/png-transparent-keras-logo-thumbnail.png" width="100" height="100"></div>
+                <div class="col"><img src="images/skills_tools/tools/Gradle_logo.png" width="100" height="100"></div>
+            </div>
+        </div>
+    </div>
 </section>
 <!-- EDUCATION END -->
+
+ <!-- PROJECT SECTION -->
+<section id="projects" class="projects">
+
+</section>
+<!-- PROJECT END -->
     
 
 <a href="https://www.flaticon.com/free-animated-icons/music" title="music animated icons">Music animated icons created by Freepik - Flaticon</a>
+<br >
+<a target="_blank" href="https://icons8.com">Icons by Icons8</a>
     <script src="assets/js/bootstrap.bundle.js"></script>
 </body>
 </html>
