Added projects to the projects section.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="#">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#contact-me">Contact</a>
                 </li>
                 </ul>
             </div>
@@ -210,8 +210,63 @@
  <!-- PROJECT SECTION -->
 <section id="projects" class="projects">
 
+    <div class="container-fluid text-center">
+
+        <h2>Projects</h2>
+
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+            <div class="card">
+                <img src="images/victoire-de-samothrace.jpg" class="card-img-top" alt="Sculpture : The Victory of Samothrace">
+                <div class="card-body">
+                <h5 class="card-title">Artefact Classification</h5>
+                <p class="card-text">Add text here.</p>
+                <a href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> View on GitHub</a>
+                </div>
+            </div>
+            </div>
+            <div class="col">
+            <div class="card">
+                <img src="images/travelling-map.jpg" class="card-img-top" alt="Map with wool linking various cities">
+                <div class="card-body">
+                <h5 class="card-title">The Traveling Salesman Dilemna</h5>
+                <p class="card-text">Add text here.</p>
+                <a href="https://github.com/m-mathilde34/Traveling-Salesman---Genetic-Algorithm" class="btn btn-primary"><i class="fa-brands fa-github"></i> View GA code on GitHub</a>
+                <a href="https://github.com/m-mathilde34/Traveling-Salesman-Analysis" class="btn btn-primary"><i class="fa-brands fa-github"></i> View Results Analysis on GitHub</a>
+                </div>
+            </div>
+            </div>
+            <div class="col">
+            <div class="card">
+                <img src="images/solar-system.jpg" class="card-img-top" alt="Solar System">
+                <div class="card-body">
+                <h5 class="card-title">The Solar System</h5>
+                <p class="card-text">Add text here.</p>
+                <a href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> View on GitHub</a>
+                </div>
+            </div>
+            </div>
+            <div class="col">
+            <div class="card">
+                <img src="images/website-building.jpg" class="card-img-top" alt="website">
+                <div class="card-body">
+                <h5 class="card-title">Online Portfolio</h5>
+                <p class="card-text">Add text here.</p>
+                <a href="https://github.com/m-mathilde34/portfolio" class="btn btn-primary"><i class="fa-brands fa-github"></i> View on GitHub</a>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+
 </section>
 <!-- PROJECT END -->
+
+<!-- CONTACT ME SECTION -->
+<section id="contact-me" class="contact-me">
+
+</section>
+<!-- CONTACT ME END -->
     
 
 <a href="https://www.flaticon.com/free-animated-icons/music" title="music animated icons">Music animated icons created by Freepik - Flaticon</a>
