--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Artefact Classification</h5>
                 <p class="card-text">Add text here.</p>
-                <a href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> View on GitHub</a>
+                <a href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
             </div>
             </div>
@@ -231,8 +231,8 @@
                 <div class="card-body">
                 <h5 class="card-title">The Traveling Salesman Dilemna</h5>
                 <p class="card-text">Add text here.</p>
-                <a href="https://github.com/m-mathilde34/Traveling-Salesman---Genetic-Algorithm" class="btn btn-primary"><i class="fa-brands fa-github"></i> View GA code on GitHub</a>
-                <a href="https://github.com/m-mathilde34/Traveling-Salesman-Analysis" class="btn btn-primary"><i class="fa-brands fa-github"></i> View Results Analysis on GitHub</a>
+                <a href="https://github.com/m-mathilde34/Traveling-Salesman---Genetic-Algorithm" class="btn btn-primary"><i class="fa-brands fa-github"></i> GA Code</a>
+                <a href="https://github.com/m-mathilde34/Traveling-Salesman-Analysis" class="btn btn-primary"><i class="fa-brands fa-github"></i> Results Analysis</a>
                 </div>
             </div>
             </div>
@@ -242,7 +242,7 @@
                 <div class="card-body">
                 <h5 class="card-title">The Solar System</h5>
                 <p class="card-text">Add text here.</p>
-                <a href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> View on GitHub</a>
+                <a href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
             </div>
             </div>
@@ -252,7 +252,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Online Portfolio</h5>
                 <p class="card-text">Add text here.</p>
-                <a href="https://github.com/m-mathilde34/portfolio" class="btn btn-primary"><i class="fa-brands fa-github"></i> View on GitHub</a>
+                <a href="https://github.com/m-mathilde34/portfolio" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
             </div>
             </div>
@@ -265,13 +265,26 @@
 <!-- CONTACT ME SECTION -->
 <section id="contact-me" class="contact-me">
 
+    <div class="container-fluid text-center">
+        <h2>Get In Touch!</h2>
+
+        <div class="col-md-2 flex-container">
+            <div class="flexbox-container item-1"><i class="fa-solid fa-envelope"></i> <a class="icon icon-email" href="mailto:m.mathilde34@live.fr" title="Email to Mathilde" target="_self" hreflang="en"> m.mathilde34@live.fr</a></div>
+            <div class="flexbox-container item-2"><i class="fa-brands fa-github"></i> <a class="icon icon-github" href="https://github.com/m-mathilde34" title="Open Github profile"> GitHub</a></div>
+            <div class="flexbox-container item-3"><i class="fas fa-brands fa-linkedin"></i> <a class="icon icon-linkedin" href="https://www.linkedin.com/in/m-mathilde34/" title="Open LinkedIn profile"> LinkedIn</a></div>
+        </div>
+    </div>
+
 </section>
 <!-- CONTACT ME END -->
-    
 
+<!-- FOOTER SECTION -->
+ 
 <a href="https://www.flaticon.com/free-animated-icons/music" title="music animated icons">Music animated icons created by Freepik - Flaticon</a>
 <br >
 <a target="_blank" href="https://icons8.com">Icons by Icons8</a>
     <script src="assets/js/bootstrap.bundle.js"></script>
+
+<!-- FOOTER END -->
 </body>
 </html>
