Implemented the footer section

--- a/index.html
+++ b/index.html
@@ -279,12 +279,43 @@
 <!-- CONTACT ME END -->
 
 <!-- FOOTER SECTION -->
- 
-<a href="https://www.flaticon.com/free-animated-icons/music" title="music animated icons">Music animated icons created by Freepik - Flaticon</a>
-<br >
-<a target="_blank" href="https://icons8.com">Icons by Icons8</a>
-    <script src="assets/js/bootstrap.bundle.js"></script>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#E9E9E9" fill-opacity="1" d="M0,96L48,90.7C96,85,192,75,288,96C384,117,480,171,576,213.3C672,256,768,288,864,261.3C960,235,1056,149,1152,128C1248,107,1344,149,1392,170.7L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+<section id="footer" class="footer">
 
+    <div class="container-fluid text-center">
+        <div class="row align-items">
+
+            <!--LEFT BLOCK-->
+            <div class="col-md-6 credits-block">
+                <div class="credits">
+                    <div class="row">
+                        <a href="https://www.flaticon.com/free-animated-icons/music" title="music animated icons">Music animated icons created by Freepik - Flaticon</a>
+                    </div>
+                    <div class="row">
+                        <a target="_blank" href="https://icons8.com">Icons by Icons8</a>
+                    </div>
+                    <div class="row">
+                        <a href="https://pixabay.com/">Images from PixaBay</a>
+                    </div>
+                    <div class="row">                   
+                        <p>'Artefact Classification' image taken by Mathilde Martin during a visit to Le Louvre.</p>
+                    </div> 
+                </div>
+            </div>
+
+            <!--RIGHT DESCRIPTION BLOCK-->
+            <div class="col-md-6 design-info">
+                <div class="row"><br ></div>
+                <div class="row"><p>Designed and built by Mathilde Martin</p></div>
+                <div class="row"><br ></div>
+            </div>
+            
+        </div> 
+    </div>
+
+</section>
 <!-- FOOTER END -->
+
+<script src="assets/js/bootstrap.bundle.js"></script>
 </body>
 </html>
