Corrected spelling, added spaces, added icons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="pdfs/Mathilde Martin CV.pdf">Resume <i class="fa-solid fa-download"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact-me">Contact</a>
@@ -136,7 +136,7 @@
                     <div class="circle-icon"><i class="fa-solid fa-user-graduate"></i></div>
                 </div>
                 <div class="col-md-6 diploma">
-                    <p class="course">MSc Computer Science - <i class="fa-regular fa-hourglass-half"></i></p>
+                    <p class="course">MSc Computer Science - Distinction</p>
                     <p class="date">2021 - 2024 @ The University of Bath</p>
                     <br >
                     <p class="dissertation">My dissertation involved the creation of a novel dataset
@@ -145,7 +145,7 @@
                         identifies the provenance of the pictured
                         artefact.’
                     </p>
-                    <div class="button-container"><button type="button" class="btn">Read me</button></div>
+                    <div class="button-container"><button type="button" class="btn"><a href="pdfs/Dissertation.pdf" alth="MSc in Computer Science - Dissertation">Read me</a></button></div>
                 </div>
             </div>
             <br >
@@ -164,15 +164,15 @@
                         Depictions of the afterlife in early modern drama 
                         and contemporary film.’
                     </p>
-                    <div class="button-container"><button type="button" class="btn"><a href="pdfs/'Born to fly upward'.pdf" alth="Bachelor of Drama dissertion">Read me</a></button></div>
+                    <div class="button-container"><button type="button" class="btn"><a href="pdfs/'Born to fly upward'.pdf" alth="Bachelor of Drama dissertation">Read me</a></button></div>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="container-fluid text-center skills">
-
-    <h2>Skills and Tools</h2>
+        <h2>Skills and Tools</h2>
+        <br >
 
         <div class="container text-center">
             <div class="row">
@@ -221,7 +221,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Artefact Classification</h5>
                 <p class="card-text">Add text here.</p>
-                <a href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
+                <a href="https://github.com/m-mathilde34/artefact-classification" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
             </div>
             </div>
@@ -240,7 +240,7 @@
             <div class="card">
                 <img src="images/solar-system.jpg" class="card-img-top" alt="Solar System">
                 <div class="card-body">
-                <h5 class="card-title">The Solar System</h5>
+                <h5 class="card-title">The Solar System - In progress <i class="fa-regular fa-hourglass-half"></i></h5>
                 <p class="card-text">Add text here.</p>
                 <a href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
@@ -289,7 +289,7 @@
             <div class="col-md-6 credits-block">
                 <div class="credits">
                     <div class="row">
-                        <a href="https://www.flaticon.com/free-animated-icons/music" title="music animated icons">Music animated icons created by Freepik - Flaticon</a>
+                        <a href="https://www.flaticon.com/free-animated-icons/music" title="music animated icons">Music animated icon created by Freepik - Flaticon</a>
                     </div>
                     <div class="row">
                         <a target="_blank" href="https://icons8.com">Icons by Icons8</a>
