--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                       </div>
                       <div class="col-sm-5">
                         <div class="col-sm-10 listening-to">
-                            <a href="https://www.youtube.com/watch?v=3YXUWWZJXpE" alt="Currently listening to..."><img src="images/music.gif"></a></i><p>Currently playing...</p>
+                            <a href="https://www.youtube.com/watch?v=yiAJFa26KKU" alt="Currently listening to..."><img src="images/music.gif"></a></i><p>Currently playing...</p>
                         </div>
                       </div>
                     </div>
