Links will open in new tab

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pdfs/Mathilde Martin CV.pdf">Resume <i class="fa-solid fa-download"></i></a>
+                    <a class="nav-link" href="pdfs/Mathilde Martin CV.pdf" target=”_blank”>Resume <i class="fa-solid fa-download"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact-me">Contact</a>
@@ -56,9 +56,9 @@
                     <img src="images/profilepic_resized.jpg" class="img-fluid" alt="profile picture">
                 </div>
                 <div class="get-in-touch">
-                    <div class="flexbox-container item-1"><a class="nav-link" href="https://www.linkedin.com/in/m-mathilde34/"><i class="fas fa-brands fa-linkedin"></i></a></div>
-                    <div class="flexbox-container item-2"><a class="nav-link" href="https://github.com/m-mathilde34"><i class="fa-brands fa-github"></i></a></div>
-                    <div class="flexbox-container item-3"><a class="nav-link" href="mailto:m.mathilde34@live.fr"><i class="fa-solid fa-envelope"></i></a></div>
+                    <div class="flexbox-container item-1"><a class="nav-link" target=”_blank” href="https://www.linkedin.com/in/m-mathilde34/"><i class="fas fa-brands fa-linkedin"></i></a></div>
+                    <div class="flexbox-container item-2"><a class="nav-link" target=”_blank” href="https://github.com/m-mathilde34"><i class="fa-brands fa-github"></i></a></div>
+                    <div class="flexbox-container item-3"><a class="nav-link" target=”_blank” href="mailto:m.mathilde34@live.fr"><i class="fa-solid fa-envelope"></i></a></div>
                 </div>
             </div>
 
@@ -146,7 +146,7 @@
                         identifies the provenance of the pictured
                         artefact.’
                     </p>
-                    <div class="button-container"><button type="button" class="btn"><a href="pdfs/Dissertation.pdf" alth="MSc in Computer Science - Dissertation">Read me</a></button></div>
+                    <div class="button-container"><button type="button" class="btn"><a href="pdfs/Dissertation.pdf" target=”_blank” alt="MSc in Computer Science - Dissertation">Read me</a></button></div>
                 </div>
             </div>
             <br >
@@ -165,7 +165,7 @@
                         Depictions of the afterlife in early modern drama 
                         and contemporary film.’
                     </p>
-                    <div class="button-container"><button type="button" class="btn"><a href="pdfs/'Born to fly upward'.pdf" alth="Bachelor of Drama dissertation">Read me</a></button></div>
+                    <div class="button-container"><button type="button" class="btn"><a href="pdfs/'Born to fly upward'.pdf" target=”_blank” alt="Bachelor of Drama dissertation">Read me</a></button></div>
                 </div>
             </div>
         </div>
@@ -222,7 +222,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Artefact Classification</h5>
                 <p class="card-text">Add text here.</p>
-                <a href="https://github.com/m-mathilde34/artefact-classification" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
+                <a target=”_blank” href="https://github.com/m-mathilde34/artefact-classification" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
             </div>
             </div>
@@ -232,8 +232,8 @@
                 <div class="card-body">
                 <h5 class="card-title">The Traveling Salesman Dilemna</h5>
                 <p class="card-text">Add text here.</p>
-                <a href="https://github.com/m-mathilde34/Traveling-Salesman---Genetic-Algorithm" class="btn btn-primary"><i class="fa-brands fa-github"></i> GA Code</a>
-                <a href="https://github.com/m-mathilde34/Traveling-Salesman-Analysis" class="btn btn-primary"><i class="fa-brands fa-github"></i> Results Analysis</a>
+                <a target=”_blank” href="https://github.com/m-mathilde34/Traveling-Salesman---Genetic-Algorithm" class="btn btn-primary"><i class="fa-brands fa-github"></i> GA Code</a>
+                <a target=”_blank” href="https://github.com/m-mathilde34/Traveling-Salesman-Analysis" class="btn btn-primary"><i class="fa-brands fa-github"></i> Results Analysis</a>
                 </div>
             </div>
             </div>
@@ -243,7 +243,7 @@
                 <div class="card-body">
                 <h5 class="card-title">The Solar System - In progress <i class="fa-regular fa-hourglass-half"></i></h5>
                 <p class="card-text">Add text here.</p>
-                <a href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
+                <a target=”_blank” href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
             </div>
             </div>
@@ -253,7 +253,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Online Portfolio</h5>
                 <p class="card-text">Add text here.</p>
-                <a href="https://github.com/m-mathilde34/portfolio" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
+                <a target=”_blank” href="https://github.com/m-mathilde34/portfolio" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
             </div>
             </div>
@@ -271,8 +271,8 @@
 
         <div class="col-md-2 flex-container">
             <div class="flexbox-container item-1"><i class="fa-solid fa-envelope"></i> <a class="icon icon-email" href="mailto:m.mathilde34@live.fr" title="Email to Mathilde" target="_self" hreflang="en"> m.mathilde34@live.fr</a></div>
-            <div class="flexbox-container item-2"><i class="fa-brands fa-github"></i> <a class="icon icon-github" href="https://github.com/m-mathilde34" title="Open Github profile"> GitHub</a></div>
-            <div class="flexbox-container item-3"><i class="fas fa-brands fa-linkedin"></i> <a class="icon icon-linkedin" href="https://www.linkedin.com/in/m-mathilde34/" title="Open LinkedIn profile"> LinkedIn</a></div>
+            <div class="flexbox-container item-2"><i class="fa-brands fa-github"></i> <a class="icon icon-github" target=”_blank” href="https://github.com/m-mathilde34" title="Open Github profile"> GitHub</a></div>
+            <div class="flexbox-container item-3"><i class="fas fa-brands fa-linkedin"></i> <a class="icon icon-linkedin" target=”_blank” href="https://www.linkedin.com/in/m-mathilde34/" title="Open LinkedIn profile"> LinkedIn</a></div>
         </div>
     </div>
 
@@ -290,13 +290,13 @@
             <div class="col-md-6 credits-block">
                 <div class="credits">
                     <div class="row">
-                        <a href="https://www.flaticon.com/free-animated-icons/music" title="music animated icons">Music animated icon created by Freepik - Flaticon</a>
+                        <a target=”_blank” href="https://www.flaticon.com/free-animated-icons/music" title="music animated icons">Music animated icon created by Freepik - Flaticon</a>
                     </div>
                     <div class="row">
                         <a target="_blank" href="https://icons8.com">Icons by Icons8</a>
                     </div>
                     <div class="row">
-                        <a href="https://pixabay.com/">Images from PixaBay</a>
+                        <a target=”_blank” href="https://pixabay.com/">Images from PixaBay</a>
                     </div>
                     <div class="row">                   
                         <p>'Artefact Classification' image taken by Mathilde Martin during a visit to Le Louvre.</p>
