Added descriptions to each project

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <p><br />Having just completed a Msc of Computer Science with the University of Bath, I am now looking for a role as a software developer.
                         My dissertation involved the creation of a novel dataset, and I am particularly interested in Machine Learning as a way to protect
                         and preserve our cultural heritage for future generations to enjoy. I like working on both front-end and back-end projects and I am 
-                        currently working on personal projects such as modelling the Solar System in Java.</p>
+                        currently working on personal projects such as modelling the Solar System.</p>
                 </div>
             </div>
         </div>
@@ -217,43 +217,98 @@
 
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
-            <div class="card">
+            <div class="card h-100">
                 <img src="images/victoire-de-samothrace.jpg" class="card-img-top" alt="Sculpture : The Victory of Samothrace">
                 <div class="card-body">
                 <h5 class="card-title">Artefact Classification</h5>
-                <p class="card-text">Add text here.</p>
-                <a target=”_blank” href="https://github.com/m-mathilde34/artefact-classification" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
+                <p class="card-text">This project was created and put together for my dissertation as part of my MSc in Computer Science.
+                    It involved the creation of a novel cultural-heritage specific dataset which covers
+                    6 classes with a combined total of 223,486 images. The quality of this dataset was demonstrated using various CNNs pre-trained on ImageNet.
+                    ResNet50 and EfficientNetB0 to B2 were the models chosen for this task and all achieved
+                    between 84% and 86% global accuracy. Additionally, we investigated how much class imbalance
+                    can impact the accuracy of a CNN using class weights, undersampling, and oversampling
+                    techniques. Our experiments showed that undersampling and class weights made our models
+                    worse. In contrast, oversampling using data augmentation helped our model be more balanced
+                    by bringing its precision and recall values closer together; they attained 68.9333% and 63.5916%
+                    respectively.
+                    As there is very little research in art classification and no cultural-heritage specific dataset
+                    readily available for visual classification tasks, the findings and output of this project opened
+                    up new avenues of research for cultural-heritage tasks.</p>
+                <div class="tags">
+                    <span class="language-tool-tag">PYTHON</span>
+                    <span class="language-tool-tag">SCRAPY</span>
+                    <span class="language-tool-tag">JUPYTER</span>
+                    <span class="language-tool-tag">DOCKER</span>
+                    <span class="language-tool-tag">KERAS</span>
+                    <span class="language-tool-tag">TENSORFLOW</span>
+                    <span class="language-tool-tag">SEABORN</span>
+                    <span class="language-tool-tag">PANDAS</span>
+                </div>
+                <br >
+                </div>
+                <div class="card-footer">
+                    <a target=”_blank” href="https://github.com/m-mathilde34/artefact-classification" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
             </div>
             </div>
             <div class="col">
-            <div class="card">
+            <div class="card h-100">
                 <img src="images/travelling-map.jpg" class="card-img-top" alt="Map with wool linking various cities">
                 <div class="card-body">
                 <h5 class="card-title">The Traveling Salesman Dilemna</h5>
-                <p class="card-text">Add text here.</p>
-                <a target=”_blank” href="https://github.com/m-mathilde34/Traveling-Salesman---Genetic-Algorithm" class="btn btn-primary"><i class="fa-brands fa-github"></i> GA Code</a>
+                <p class="card-text">The Traveling Salesman problem is one of the most famous example of NP problems :
+                    "Given a list of cities and the distances between each pair of cities, what is the shortest possible route that visits each city exactly once and returns to the origin city?"
+                    In this project, we created a genetic algorithm in order to find a solution deemed 'good enough' to this problem.
+                    There are five stages to this algorithm : (1) Initialisation of the population, (2) Fitness function, (3) Selection of the fittest individuals (the parents),
+                    (4) Reproduction, (5) Mutation. In this project, the <i>Tournament Selection</i> was chosen as the selection method. For reproduction, due to the nature of this NP-problem,
+                    <i>Ordered Crossover</i> was selected. Finally, for the mutation step, <i>Swap Mutation</i> was chosen.</p>
+                    <div class="tags">
+                        <span class="language-tool-tag">JAVA</span>
+                        <span class="language-tool-tag">GRADLE</span>
+                        <span class="language-tool-tag">TEST-DRIVEN DEVELOPMENT</span>
+                        <span class="language-tool-tag">PYTHON</span>
+                        <span class="language-tool-tag">JUPYTER</span>
+                        <span class="language-tool-tag">SEABORN</span>
+                    </div>
+                    <br >
+                </div>
+                <div class="card-footer">
+                    <a target=”_blank” href="https://github.com/m-mathilde34/Traveling-Salesman---Genetic-Algorithm" class="btn btn-primary"><i class="fa-brands fa-github"></i> GA Code</a>
                 <a target=”_blank” href="https://github.com/m-mathilde34/Traveling-Salesman-Analysis" class="btn btn-primary"><i class="fa-brands fa-github"></i> Results Analysis</a>
                 </div>
             </div>
             </div>
             <div class="col">
-            <div class="card">
+            <div class="card h-100">
                 <img src="images/solar-system.jpg" class="card-img-top" alt="Solar System">
                 <div class="card-body">
                 <h5 class="card-title">The Solar System - In progress <i class="fa-regular fa-hourglass-half"></i></h5>
-                <p class="card-text">Add text here.</p>
-                <a target=”_blank” href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
+                <p class="card-text">Description to come.</p>
+                </div>
+                <div class="card-footer">
+                    <a target=”_blank” href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
             </div>
             </div>
             <div class="col">
-            <div class="card">
+            <div class="card h-100">
                 <img src="images/website-building.jpg" class="card-img-top" alt="website">
                 <div class="card-body">
                 <h5 class="card-title">Online Portfolio</h5>
-                <p class="card-text">Add text here.</p>
-                <a target=”_blank” href="https://github.com/m-mathilde34/portfolio" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
+                <p class="card-text">
+                    This online portfolio which you are currently browsing was created to act as an online resume showcasing all my acquired skills.
+                    This was also an opportunity to learn to work with Sass and reinforce my grip over HTML, CSS, and Boostrap.
+                </p>
+                <div class="tags">
+                    <span class="language-tool-tag">HTML</span>
+                    <span class="language-tool-tag">CSS</span>
+                    <span class="language-tool-tag">BOOTSTRAP</span>
+                    <span class="language-tool-tag">SASS</span>
+                </div>
+                <br >
+                </div>
+                <div class="card-footer">
+                    <a target=”_blank” href="https://github.com/m-mathilde34/portfolio" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
             </div>
             </div>
